public/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}

*,
p,
label,
button,
option,
select,
input,
a {
  font-family: "Khula", sans-serif;
}

h1 {
  font-size: 1.5em;
  font-family: "Josefin Slab", serif;
}

h2 {
  font-family: "Work Sans", sans-serif;
  font-size: 1.5em;
}

a.itemLink,
a.itemLink:visited {
  color: #2a2b2a;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

button {
  margin: 0 5px;
  border: 1px solid rgb(80, 76, 76);
  background-color: aliceblue;
  padding: 10px;
  margin: 0;
  cursor: pointer;
}

button:hover {
  color: aliceblue;
  background-color: #507dbc;
}

button:disabled {
  border: 0;
  border: 1px solid rgb(158, 149, 149);
}

.headerNav {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 35%;
  padding: 0 30px;
  text-align: center;
  color: #f6c7c7;
  background-color: #f12b6b;
  border: 2px solid #f12b6b;
  margin-right: 15px;
  border-radius: 10px;
  text-decoration: none;
  font-size: 1.1em;
}

.headerNav:hover {
  color: #f12b6b;
  background-color: #f6c7c7;
}

#headerCart {
  display: static;
  position: relative;
}

#cartCount {
  position: absolute;
  bottom: -50%;
  right: -10%;
  background-color: #f6c7c7;
  padding: 5px 8px;
  border-radius: 10px;
  color: #f12b6b;
  border: 2px solid #f12b6b;
}

#shopHome {
  display: flex;
  flex-direction: column;
}

.shopSections {
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.storeNav {
  width: 100%;
  transition: all 1s;
  overflow: hidden;
  opacity: 0;
  max-height: 0;
}

.expandedStoreNav {
  opacity: 1;
  margin: 0;
}

.storeNavButton {
  display: flex;
  justify-content: space-between;
  width: 100%;
  border: 1px solid rgb(80, 76, 76);
  background-color: aliceblue;
  padding: 10px;
  margin: 0;
  cursor: pointer;
}

.storeNavButton::after {
  content: "\25be";
  transform: scale(1.5) translateY(-1px);
  transition: transform 300ms linear;
}

.expandedStoreNavButton::after {
  transform: scale(1.5) rotate(60deg);
}

#shopNavList {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0;
}

.clearTagBtn {
  margin-left: 5px;
}

.deleteTagBtn:hover {
  text-shadow: 0 0 2px white;
}

.tagCheckBox {
  cursor: pointer;
}

.itemListing {
  padding: 10px;
  margin: 5px;
  list-style: none;
  border-radius: 10px;
  border: 3px solid transparent;
}

.itemListingImg {
  width: 200px;
  height: auto;
  border-radius: 20px;
  margin-bottom: 20px;
}

.itemListing:hover {
  background-color: #d7ece2;
  border: 3px solid rgb(165, 177, 172);
}

.heroImg {
  position: relative;
}

.heroText {
  position: absolute;
  left: 40%;
  bottom: 0;
  text-align: center;
  font-size: 3em;
  color: white;
}

.pageNav {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.pgBtn {
  margin: 0 5px;
  border: 1px solid rgb(80, 76, 76);
  background-color: aliceblue;
  margin: 0;
  cursor: pointer;
}

#pageSelect {
  appearance: none;
  background-color: inherit;
  border: 0;
  width: 100%;
  height: 100%;
  padding: 10px;
  cursor: pointer;
}

#pageSelect:hover {
  background-color: #507dbc;
  color: aliceblue;
}

.itemPageContainer {
  display: flex;
  height: 85vh;
}

.itemPage {
  width: 75%;
  height: 60%;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 2fr 1fr;
  grid-template-areas:
    "img blank"
    "img info";
  margin-bottom: 50px;
}

.itemPageImg {
  max-height: 400px;
  width: auto;
  grid-area: img;
  align-self: end;
  justify-self: end;
  padding: 10px;
}

.itemInfo {
  padding: 10px;
  grid-area: info;
  align-self: start;
  justify-self: center;
}

.recommendations {
  display: flex;
}

footer,
.footerLink {
  color: #f6c7c7;
}

.socialMediaLink {
  color: #f6c7c7;
  padding: 0 10px;
}

.socialMediaLink:hover {
  filter: drop-shadow(0 0 2px #f6c7c7);
}

